Added STA and WFS nodes

--- a/index.html
+++ b/index.html
@@ -82,6 +82,38 @@ BF1C0AD2 86103639 A6C5CF57 91AFEDAE 9A3CB035 C5C6B599 2F57CA37 20202E11
 F50219D9 6A22CC3F 046E5DE2 7D3888F2 B15DDF8E B2DD8DB7 F8A3DBB8 EDBE6C80
 CD37C399 3D6C37EC 97CE2FC5 55282085 075B2F79 273ECEA7 81152A81 615B778A
 CD020301 0001</code></pre>
+
+            <h1 id="mel">sta.illallangi.dn42</h1>
+            <p><em>Location</em>: Melbourne, Australia</p>
+            <p><em>Public Hostname</em>: ienustarti0001.sta.illallangi.enterprises</p>
+            <p><em>Public IPv4 Address</em>: 150.101.220.176</p>
+            <p><em>IPSec Public Key (Cisco Format)</em>:</p>
+            <pre><code>30820122 300D0609 2A864886 F70D0101 01050003 82010F00 3082010A 02820101
+00BC6150 05F56746 1923B8F3 E775F9CD 94F161D0 10F7BB75 D8635558 9ED5C35F
+0225F93B B8E4D6B6 C8332D2B B0017445 15CD9B7F 6C8F7BD3 6243E182 E39F80B8
+B36FACE7 0C1AA997 B709A952 7CB818FA F5CB3EFC 162AED6A C3A15EED 71D14816
+92B1DC5A 23943EF4 EFDF8DDF E066A746 2DD46E63 E6848202 190B060E 4D9CAAE4
+B6CC4617 B948AB42 06A56458 7A79B293 2EF43E08 9996B8EF 3E8D749D B297392D
+2C2CD439 52C994EA F3380D13 A5CBDF89 BE5140E2 C8E0F08E 3BF6357B B824232E
+0FC97612 56722557 2FF47E80 6B950799 DB9E8AD3 AB856EAD 42D36240 E45BC19D
+1688ED97 EF2BBA0A 5C3A3583 419B225D A9C7C37B 76E1BC2E 494CB3AA B3BA0E54
+97020301 0001</code></pre>
+
+            <h1 id="mel">wfs.illallangi.dn42</h1>
+            <p><em>Location</em>: Melbourne, Australia</p>
+            <p><em>Public Hostname</em>: ienuwfsrti0001.wfs.illallangi.enterprises</p>
+            <p><em>Public IPv4 Address</em>: 150.101.220.177</p>
+            <p><em>IPSec Public Key (Cisco Format)</em>:</p>
+            <pre><code>30820122 300D0609 2A864886 F70D0101 01050003 82010F00 3082010A 02820101
+00DCC728 30703B4A 483AFE10 001BA47F F2467FD9 2C06C768 D6589E9D 3150061D
+8EF65D15 9EE28CE2 14F5FB3C FD6136BA 65B7C062 6400ED8D 6C47EDF2 CFEEFDB0
+0F4905D6 835A121D EBE478DC C7646564 3070B889 003F8BF8 A8EA849D F937B3A8
+20D4C60F 234649B9 E6F2185C 2A13AC0C EB19B87F 6CEBFF00 11279054 CA1894A8
+1F65C6B6 081A0B06 84DE82FD 6C480C57 167EB921 6B78C537 C5ECFD4B B021B458
+45A9A2D1 2A63173E 4B7E054E DC1D51C7 0E8ADD3F C858E060 9C9B714C EEC35BDB
+BEC92AA3 CCF45AB1 314867FA DA84657B 5D26EE5D 849FE298 D138A29D 4F80DB7A
+A8244A43 FAC9C822 71585F3C 52323064 3F19F765 3213E996 33897CE6 D1660E5A
+FB020301 0001</code></pre>
           </div>
         </div>
     </div>
