Added pubkey-converter link

--- a/index.html
+++ b/index.html
@@ -118,6 +118,17 @@ FB020301 0001</code></pre>
         </div>
     </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9">
+            <h1 id="links">Useful Links</h1>
+            <ul>
+             <li><a href="https://git.dn42.us/ryan/pubkey-converter">pubkey-converter</a></li>
+            </ul>
+          </div>
+        </div>
+    </div>
+
 
     <!-- <div class="container">
       <footer id="footer">
