Added links to registries

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@ B5877EDE 3A93D601 7007618C DE5482A0 B2C4673C D864F4E0 A00FEFD5 539CEC4E
         <div class="col-lg-9">
             <h1 id="links">Useful Links</h1>
             <ul>
+             <li><a href="https://git.dn42.us/dn42/registry">dn42/registry</a></li>
+             <li><a href="https://git.dn42.us/andrewcole/registry">andrewcole/registry</a></li>
              <li><a href="https://git.dn42.us/ryan/pubkey-converter">pubkey-converter</a></li>
             </ul>
           </div>
