Added link to in-neg err

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ D21F195C 52A6E2E7 70893966 3FE26BE4 716DA0DB 290B3D8B A7ADB89D 965B58AC
              <li><a href="https://git.dn42.us/ryan/pubkey-converter">pubkey-converter</a></li>
              <li><a href="https://www.cisco.com/c/en/us/support/docs/security-vpn/internet-security-association-key-management-protocol-isakmp/117633-technote-ISAKMP-00.html">IOS IKEv1 and IKEv2 Packet Exchange Processes for Profiles with Multiple Certificates</a></li>
              <li><a href="https://www.ciscozine.com/how-to-create-self-signed-certificates/">How to create self-signed certificates</a></li>
+             <li><a href="https://bst.cloudapps.cisco.com/bugsearch/bug/CSCvd69373">IKEv2: Unable to initiate IKE session to a specific peer due to 'in-neg' SA Leak</a></li>
             </ul>
           </div>
         </div>
